<resources>
    <string name="app_name" translatable="false">HotelRoom Service</string>
    <string name="fab_search_description">Search button</string>
    <string name="hotels_item_title">Hotels</string>
    <string name="my_stay_item_title">My Stays</string>
    <string name="user_stay_empty">Looks like you haven\'t chosen any hotel.\n <u>You can browse here</u></string>
    <string name="settings_item_title">Settings</string>
    <string name="nav_drawer_open" translatable="false">Open Drawer</string>
    <string name="nav_drawer_close" translatable="false">Close Drawer</string>
    <string name="header_profile">Profile</string>
    <string name="searchbar_hint">Search Location</string>
    <string name="btn_pick_dates">Pick dates</string>
    <string name="tv_dates_hint">Dates</string>
    <string name="tv_currencies_dropdown_hint">Currencies</string>
    <string name="search">Search Hotels</string>
    <string name="btn_add">Add To Stays</string>
    <string name="btn_remove">Remove</string>
    <string name="details"><u>More Details</u></string>
    <string name="current_location">Current Location</string>
    <string name="search_bar_description">Search for location</string>
    <string name="usd" translatable="false">USD</string>
    <string name="restaurants_nearby">Restaurants Nearby</string>
    <string name="view_all"><u>View All</u></string>
    <string name="attractions_nearby">Attractions Nearby</string>
    <string name="price">Price</string>
    <string name="link">Link</string>
...
    <string name="night">Good night</string>
    <string name="morning">Good morning</string>
    <string name="evening">Good evening</string>
    <string name="stays_login_message">Please, Log in!</string>
    <string name="current_lang" translatable="false">%1$s</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="change_language">Change language</string>
    <string name="change_language_info">App will be restarted, to apply changes.\n\nPlease, note, that some translations might be incorrect.</string>
    <string name="added">Added</string>
    <string name="removed">Removed</string>
    <string name="logout_info">Do you really want to log out?</string>
    <string name="default_notification_channel_id">Push notifications</string>
...
