...

    <data>

    </data>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.activities.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
...
                app:layout_constraintTop_toTopOf="parent"
                app:navGraph="@navigation/nav_graph"
                tools:layout="@layout/fragment_hotels" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:contentDescription="@string/fab_search_description"
                android:src="@drawable/outline_search_24"
                app:layout_constraintBottom_toBottomOf="parent"
...
